--- a/about.html
+++ b/about.html
@@ -28,3 +28,58 @@
 
 </body>
 </html>
+<!-- Footer Section for Majeeo Nuts -->
+<footer class="bg-white border-t mt-16">
+  <div class="bg-gray-100 py-8 px-4 sm:px-6 lg:px-16">
+    <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-8">
+
+      <!-- Brand and Description -->
+      <div>
+        <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-24 mb-2">
+        <p class="text-gray-600">Majeeo Nuts brings you a collection of carefully selected dry fruits from India and across the world.</p>
+      </div>
+
+      <!-- Quick Links -->
+      <div>
+        <h4 class="font-semibold text-gray-800 mb-2">Quick Links</h4>
+        <ul class="text-gray-600 space-y-1">
+          <li><a href="about.html" class="hover:text-blue-600">About Us</a></li>
+          <li><a href="contact.html" class="hover:text-blue-600">Contact Us</a></li>
+          <li><a href="bulk-order.html" class="hover:text-blue-600">Bulk Ordering</a></li>
+          <li><a href="shop.html" class="hover:text-blue-600">Shopping</a></li>
+        </ul>
+      </div>
+
+      <!-- Account Info -->
+      <div>
+        <h4 class="font-semibold text-gray-800 mb-2">Account Info</h4>
+        <ul class="text-gray-600 space-y-1">
+          <li><a href="account.html" class="hover:text-blue-600">My Account</a></li>
+          <li><a href="privacy.html" class="hover:text-blue-600">Privacy Policy</a></li>
+          <li><a href="returns.html" class="hover:text-blue-600">Return Policy</a></li>
+          <li><a href="terms.html" class="hover:text-blue-600">Terms & Conditions</a></li>
+        </ul>
+      </div>
+
+      <!-- Contact Details -->
+      <div>
+        <h4 class="font-semibold text-gray-800 mb-2">Contact Details</h4>
+        <ul class="text-gray-600 space-y-2">
+          <li>📍 Mumbai, India</li>
+          <li>✉️ maheshgawade7799@gmail.com</li>
+          <li>📞 +91-7483600212</li>
+        </ul>
+        <div class="mt-4 flex space-x-4">
+          <a href="#" class="text-gray-500 hover:text-blue-600"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="text-gray-500 hover:text-pink-500"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="text-gray-500 hover:text-blue-400"><i class="fab fa-twitter"></i></a>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="mt-8 border-t pt-4 text-center text-gray-500 text-sm">
+      © 2025 <strong>Majeeo Nuts</strong>. All Rights Reserved.
+    </div>
+  </div>
+</footer>
