--- a/index.html
+++ b/index.html
@@ -78,44 +78,61 @@
     </aside>
   </div>
 
-  <!-- Footer -->
-  <footer class="bg-green-800 text-white py-10 px-6 mt-10 text-sm">
-    <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
+  <!-- Footer Section for Majeeo Nuts -->
+<footer class="bg-white border-t mt-16">
+  <div class="bg-gray-100 py-8 px-4 sm:px-6 lg:px-16">
+    <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-8">
+
+      <!-- Brand and Description -->
       <div>
-        <h3 class="text-lg font-bold mb-2">Why MajeeoNuts?</h3>
-        <p>PREMIUM QUALITY – 100% Quality Guarantee</p>
-        <p>SWIFT SHIPPING – Delivering across India</p>
-        <p>EASY RETURN – Refer return policy</p>
-        <p>24/7 SUPPORT – Support every time</p>
+        <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-24 mb-2">
+        <p class="text-gray-600">Majeeo Nuts brings you a collection of carefully selected dry fruits from India and across the world.</p>
       </div>
 
+      <!-- Quick Links -->
       <div>
-        <h3 class="text-lg font-bold mb-2">Quick Links</h3>
-        <ul class="space-y-1">
-          <li><a href="about.html" class="hover:underline">About Us</a></li>
-          <li><a href="contact.html" class="hover:underline">Contact Us</a></li>
-          <li><a href="#" class="hover:underline">Bulk Ordering</a></li>
-          <li><a href="#" class="hover:underline">Privacy Policy</a></li>
-          <li><a href="#" class="hover:underline">Return Policy</a></li>
+        <h4 class="font-semibold text-gray-800 mb-2">Quick Links</h4>
+        <ul class="text-gray-600 space-y-1">
+          <li><a href="about.html" class="hover:text-blue-600">About Us</a></li>
+          <li><a href="contact.html" class="hover:text-blue-600">Contact Us</a></li>
+          <li><a href="bulk-order.html" class="hover:text-blue-600">Bulk Ordering</a></li>
+          <li><a href="shop.html" class="hover:text-blue-600">Shopping</a></li>
         </ul>
       </div>
 
+      <!-- Account Info -->
       <div>
-        <h3 class="text-lg font-bold mb-2">Contact Details</h3>
-        <p>NR TOWERS, 17th Cross, Sector 4, 19th Main Rd, HSR Layout, Bengaluru - 560102</p>
-        <p>Email: info@dryfruithouse.com</p>
-        <p>Phone: +91-7483600212</p>
-        <div class="flex space-x-4 mt-2">
-          <a href="#" aria-label="Facebook">Facebook</a>
-          <a href="#" aria-label="Instagram">Instagram</a>
-          <a href="#" aria-label="LinkedIn">LinkedIn</a>
+        <h4 class="font-semibold text-gray-800 mb-2">Account Info</h4>
+        <ul class="text-gray-600 space-y-1">
+          <li><a href="account.html" class="hover:text-blue-600">My Account</a></li>
+          <li><a href="privacy.html" class="hover:text-blue-600">Privacy Policy</a></li>
+          <li><a href="returns.html" class="hover:text-blue-600">Return Policy</a></li>
+          <li><a href="terms.html" class="hover:text-blue-600">Terms & Conditions</a></li>
+        </ul>
+      </div>
+
+      <!-- Contact Details -->
+      <div>
+        <h4 class="font-semibold text-gray-800 mb-2">Contact Details</h4>
+        <ul class="text-gray-600 space-y-2">
+          <li>📍 Mumbai, India</li>
+          <li>✉️ maheshgawade7799@gmail.com</li>
+          <li>📞 +91-7483600212</li>
+        </ul>
+        <div class="mt-4 flex space-x-4">
+          <a href="#" class="text-gray-500 hover:text-blue-600"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="text-gray-500 hover:text-pink-500"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="text-gray-500 hover:text-blue-400"><i class="fab fa-twitter"></i></a>
         </div>
       </div>
+
     </div>
-    <div class="text-center mt-6 border-t pt-4 border-green-600">
-      Copyright © 2025 Dry Fruit House. All Rights Reserved.
+
+    <div class="mt-8 border-t pt-4 text-center text-gray-500 text-sm">
+      © 2025 <strong>Majeeo Nuts</strong>. All Rights Reserved.
     </div>
-  </footer>
+  </div>
+</footer>
 
   <!-- Razorpay Script -->
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
