--- a/home.html
+++ b/home.html
@@ -29,6 +29,11 @@
     </nav>
   </header>
 
+<!-- Search Bar -->
+<div class="bg-yellow-100 py-4 px-6 flex justify-center">
+  <input type="text" id="searchInput" placeholder="Search products..." class="w-full max-w-md px-4 py-2 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-green-600" />
+</div>
+
   <!-- Hero Image Slider -->
   <section class="relative overflow-hidden max-w-7xl mx-auto mt-6 rounded-xl shadow-lg">
     <img src="images/MajeeoNuts1.png" alt="MajeeoNuts Banner" class="w-full h-80 object-cover animate-fade-in">
@@ -207,5 +212,24 @@
 
     renderCart();
   </script>
+  
+  <script>
+  const searchInput = document.getElementById("searchInput");
+  const products = document.querySelectorAll("main article");
+
+  searchInput.addEventListener("input", () => {
+    const query = searchInput.value.toLowerCase();
+
+    products.forEach(product => {
+      const productName = product.querySelector("h2").innerText.toLowerCase();
+      if (productName.includes(query)) {
+        product.style.display = "block";
+      } else {
+        product.style.display = "none";
+      }
+    });
+  });
+</script>
+
 </body>
 </html>
