Updated homepage with hero video

--- a/home.html
+++ b/home.html
@@ -29,15 +29,15 @@
     </nav>
   </header>
 
-<!-- Search Bar -->
-<div class="bg-yellow-100 py-4 px-6 flex justify-center">
-  <input type="text" id="searchInput" placeholder="Search products..." class="w-full max-w-md px-4 py-2 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-green-600" />
-</div>
+  <!-- Search Bar -->
+  <div class="bg-yellow-100 py-4 px-6 flex justify-center">
+    <input type="text" id="searchInput" placeholder="Search products..." class="w-full max-w-md px-4 py-2 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-green-600" />
+  </div>
 
-  <!-- Hero Video Slider -->
+  <!-- Hero Video Section -->
   <section class="relative overflow-hidden max-w-7xl mx-auto mt-6 rounded-xl shadow-lg">
     <video controls class="w-full h-80 object-cover animate-fade-in">
-      <source src="images/majeeonuts_dryfruits_homepage_video.mp4" type="video/mp4">
+      <source src="media/majeeonuts_dryfruits_homepage_video.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </section>
@@ -87,151 +87,136 @@
   </div>
 
   <!-- Footer Section for Majeeo Nuts -->
-<footer class="bg-white border-t mt-16">
-  <div class="bg-gray-100 py-8 px-4 sm:px-6 lg:px-16">
-    <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-8">
-
-      <!-- Brand and Description -->
-      <div>
-        <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-24 mb-2">
-        <p class="text-gray-600">Majeeo Nuts brings you a collection of carefully selected dry fruits from India and across the world.</p>
-      </div>
-
-      <!-- Quick Links -->
-      <div>
-        <h4 class="font-semibold text-gray-800 mb-2">Quick Links</h4>
-        <ul class="text-gray-600 space-y-1">
-          <li><a href="about.html" class="hover:text-blue-600">About Us</a></li>
-          <li><a href="contact.html" class="hover:text-blue-600">Contact Us</a></li>
-          <li><a href="bulk-order.html" class="hover:text-blue-600">Bulk Ordering</a></li>
-          <li><a href="shop.html" class="hover:text-blue-600">Shopping</a></li>
-        </ul>
-      </div>
-
-      <!-- Account Info -->
-      <div>
-        <h4 class="font-semibold text-gray-800 mb-2">Account Info</h4>
-        <ul class="text-gray-600 space-y-1">
-          <li><a href="account.html" class="hover:text-blue-600">My Account</a></li>
-          <li><a href="privacy.html" class="hover:text-blue-600">Privacy Policy</a></li>
-          <li><a href="return.html" class="hover:text-blue-600">Return Policy</a></li>
-          <li><a href="terms.html" class="hover:text-blue-600">Terms & Conditions</a></li>
-        </ul>
-      </div>
-
-      <!-- Contact Details -->
-      <div>
-        <h4 class="font-semibold text-gray-800 mb-2">Contact Details</h4>
-        <ul class="text-gray-600 space-y-2">
-          <li>📍 Mumbai, India</li>
-          <li>✉️ maheshgawade7799@gmail.com</li>
-          <li>📞 +91-7483600212</li>
-        </ul>
-        <div class="mt-4 flex space-x-4">
-          <a href="#" class="text-gray-500 hover:text-blue-600"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="text-gray-500 hover:text-pink-500"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="text-gray-500 hover:text-blue-400"><i class="fab fa-twitter"></i></a>
+  <footer class="bg-white border-t mt-16">
+    <div class="bg-gray-100 py-8 px-4 sm:px-6 lg:px-16">
+      <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-8">
+        <div>
+          <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-24 mb-2">
+          <p class="text-gray-600">Majeeo Nuts brings you a collection of carefully selected dry fruits from India and across the world.</p>
+        </div>
+        <div>
+          <h4 class="font-semibold text-gray-800 mb-2">Quick Links</h4>
+          <ul class="text-gray-600 space-y-1">
+            <li><a href="about.html" class="hover:text-blue-600">About Us</a></li>
+            <li><a href="contact.html" class="hover:text-blue-600">Contact Us</a></li>
+            <li><a href="bulk-order.html" class="hover:text-blue-600">Bulk Ordering</a></li>
+            <li><a href="shop.html" class="hover:text-blue-600">Shopping</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="font-semibold text-gray-800 mb-2">Account Info</h4>
+          <ul class="text-gray-600 space-y-1">
+            <li><a href="account.html" class="hover:text-blue-600">My Account</a></li>
+            <li><a href="privacy.html" class="hover:text-blue-600">Privacy Policy</a></li>
+            <li><a href="return.html" class="hover:text-blue-600">Return Policy</a></li>
+            <li><a href="terms.html" class="hover:text-blue-600">Terms & Conditions</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="font-semibold text-gray-800 mb-2">Contact Details</h4>
+          <ul class="text-gray-600 space-y-2">
+            <li>📍 Mumbai, India</li>
+            <li>✉️ maheshgawade7799@gmail.com</li>
+            <li>📞 +91-7483600212</li>
+          </ul>
+          <div class="mt-4 flex space-x-4">
+            <a href="#" class="text-gray-500 hover:text-blue-600"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="text-gray-500 hover:text-pink-500"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="text-gray-500 hover:text-blue-400"><i class="fab fa-twitter"></i></a>
+          </div>
         </div>
       </div>
-
+      <div class="mt-8 border-t pt-4 text-center text-gray-500 text-sm">
+        © 2025 <strong>Majeeo Nuts</strong>. All Rights Reserved.
+      </div>
     </div>
+  </footer>
 
-    <div class="mt-8 border-t pt-4 text-center text-gray-500 text-sm">
-      © 2025 <strong>Majeeo Nuts</strong>. All Rights Reserved.
-    </div>
-  </div>
-</footer>
+  <!-- Scripts -->
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+  <script>
+    const cart = [];
+    const cartItemsDiv = document.getElementById("cart-items");
+    const checkoutBtn = document.getElementById("checkout-btn");
 
-<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-<script>
-  const cart = [];
-  const cartItemsDiv = document.getElementById("cart-items");
-  const checkoutBtn = document.getElementById("checkout-btn");
+    function renderCart() {
+      cartItemsDiv.innerHTML = "";
+      if (cart.length === 0) {
+        cartItemsDiv.innerHTML = '<p class="text-gray-500">Your cart is empty.</p>';
+        checkoutBtn.disabled = true;
+        return;
+      }
 
-  function renderCart() {
-    cartItemsDiv.innerHTML = "";
-    if (cart.length === 0) {
-      cartItemsDiv.innerHTML = '<p class="text-gray-500">Your cart is empty.</p>';
-      checkoutBtn.disabled = true;
-      return;
+      checkoutBtn.disabled = false;
+      cart.forEach((item, index) => {
+        const itemDiv = document.createElement("div");
+        itemDiv.className = "border p-3 rounded flex justify-between items-start";
+        itemDiv.innerHTML = `
+          <div>
+            <p class="font-semibold">${item.name}</p>
+            <p>${item.grams}g for ₹${item.price.toFixed(2)}</p>
+          </div>
+          <button class="text-red-600" onclick="removeItem(${index})">Remove</button>
+        `;
+        cartItemsDiv.appendChild(itemDiv);
+      });
     }
 
-    checkoutBtn.disabled = false;
-    cart.forEach((item, index) => {
-      const itemDiv = document.createElement("div");
-      itemDiv.className = "border p-3 rounded flex justify-between items-start";
-      itemDiv.innerHTML = `
-        <div>
-          <p class="font-semibold">${item.name}</p>
-          <p>${item.grams}g for ₹${item.price.toFixed(2)}</p>
-        </div>
-        <button class="text-red-600" onclick="removeItem(${index})">Remove</button>
-      `;
-      cartItemsDiv.appendChild(itemDiv);
-    });
-  }
-
-  function removeItem(index) {
-    cart.splice(index, 1);
-    renderCart();
-  }
-
-  document.querySelectorAll(".add-to-cart").forEach(button => {
-    button.addEventListener("click", () => {
-      const name = button.dataset.name;
-      const pricePerKg = parseInt(button.dataset.pricePerKg);
-      const grams = parseInt(button.parentElement.querySelector(".quantity-select").value);
-      const price = (pricePerKg / 1000) * grams;
-
-      cart.push({ name, grams, price });
+    function removeItem(index) {
+      cart.splice(index, 1);
       renderCart();
-    });
-  });
+    }
 
-  checkoutBtn.addEventListener("click", () => {
-    const total = cart.reduce((sum, item) => sum + item.price, 0);
-    const options = {
-      key: "rzp_live_LIqOpioBHDIhG4",
-      amount: Math.round(total * 100),
-      currency: "INR",
-      name: "MajeeoNuts",
-      description: "Premium Dry Fruits Purchase",
-      handler: function (response) {
-        alert("Payment successful! Payment ID: " + response.razorpay_payment_id);
-        cart.length = 0;
+    document.querySelectorAll(".add-to-cart").forEach(button => {
+      button.addEventListener("click", () => {
+        const name = button.dataset.name;
+        const pricePerKg = parseInt(button.dataset.pricePerKg);
+        const grams = parseInt(button.parentElement.querySelector(".quantity-select").value);
+        const price = (pricePerKg / 1000) * grams;
+
+        cart.push({ name, grams, price });
         renderCart();
-      },
-      prefill: {
-        email: "maheshgawade7799@gmail.com"
-      },
-      theme: {
-        color: "#047857"
-      }
-    };
-    const rzp = new Razorpay(options);
-    rzp.open();
-  });
-
-  renderCart();
-</script>
-
-<script>
-  const searchInput = document.getElementById("searchInput");
-  const products = document.querySelectorAll("main article");
-
-  searchInput.addEventListener("input", () => {
-    const query = searchInput.value.toLowerCase();
-
-    products.forEach(product => {
-      const productName = product.querySelector("h2").innerText.toLowerCase();
-      if (productName.includes(query)) {
-        product.style.display = "block";
-      } else {
-        product.style.display = "none";
-      }
+      });
     });
-  });
-</script>
 
+    checkoutBtn.addEventListener("click", () => {
+      const total = cart.reduce((sum, item) => sum + item.price, 0);
+      const options = {
+        key: "rzp_live_LIqOpioBHDIhG4",
+        amount: Math.round(total * 100),
+        currency: "INR",
+        name: "MajeeoNuts",
+        description: "Premium Dry Fruits Purchase",
+        handler: function (response) {
+          alert("Payment successful! Payment ID: " + response.razorpay_payment_id);
+          cart.length = 0;
+          renderCart();
+        },
+        prefill: {
+          email: "maheshgawade7799@gmail.com"
+        },
+        theme: {
+          color: "#047857"
+        }
+      };
+      const rzp = new Razorpay(options);
+      rzp.open();
+    });
+
+    renderCart();
+  </script>
+
+  <script>
+    const searchInput = document.getElementById("searchInput");
+    const products = document.querySelectorAll("main article");
+
+    searchInput.addEventListener("input", () => {
+      const query = searchInput.value.toLowerCase();
+      products.forEach(product => {
+        const productName = product.querySelector("h2").innerText.toLowerCase();
+        product.style.display = productName.includes(query) ? "block" : "none";
+      });
+    });
+  </script>
 </body>
 </html>
