--- a/home.html
+++ b/home.html
@@ -19,204 +19,188 @@
 </head>
 <body class="bg-yellow-50 text-gray-900">
 
-  <!-- Header -->
-  <header class="bg-green-800 text-white py-4 px-6 flex items-center justify-between shadow-md">
-    <h1 class="text-2xl font-bold">MajeeoNuts</h1>
-    <nav class="space-x-6 text-sm">
-      <a href="home.html" class="hover:underline">Home</a>
-      <a href="about.html" class="hover:underline">About Us</a>
-      <a href="contact.html" class="hover:underline">Contact Us</a>
-    </nav>
-  </header>
+<!-- Header with search bar inline -->
+<header class="bg-green-800 text-white py-4 px-6 flex items-center justify-between shadow-md">
+  <h1 class="text-2xl font-bold">MajeeoNuts</h1>
+  <nav class="space-x-6 text-sm">
+    <a href="home.html" class="hover:underline">Home</a>
+    <a href="about.html" class="hover:underline">About Us</a>
+    <a href="contact.html" class="hover:underline">Contact Us</a>
+  </nav>
+  <input type="text" id="searchInput" placeholder="Search products..." class="ml-4 px-2 py-1 rounded border text-gray-900 border-gray-300 focus:outline-none focus:ring-2 focus:ring-green-600 text-sm" />
+</header>
 
-  <!-- Search Bar -->
-  <div class="bg-yellow-100 py-4 px-6 flex justify-center">
-    <input type="text" id="searchInput" placeholder="Search products..." class="w-full max-w-md px-4 py-2 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-green-600" />
-  </div>
-
-  <!-- Hero Video Section -->
-  <section class="relative overflow-hidden max-w-7xl mx-auto mt-6 rounded-xl shadow-lg">
-    <video controls class="w-full h-80 object-cover animate-fade-in">
-      <source src="media/majeeonuts_dryfruits_homepage_video.mp4" type="video/mp4">
+<!-- Hero Section with Video and Cart -->
+<section class="max-w-7xl mx-auto mt-6 px-4 flex flex-col md:flex-row gap-6">
+  <!-- Video Left -->
+  <div class="w-full md:w-3/4 rounded-xl overflow-hidden shadow-lg">
+    <video class="w-full h-[400px] object-cover rounded-xl" controls>
+      <source src="media/majeeoNuts_dryfruits_homepage_video.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
-  </section>
-
-  <!-- Main Section -->
-  <div class="max-w-7xl mx-auto p-6 grid grid-cols-1 lg:grid-cols-4 gap-6">
-
-    <!-- Products -->
-    <main class="lg:col-span-3 grid grid-cols-1 sm:grid-cols-2 gap-6">
-      <!-- Almonds -->
-      <article class="bg-white rounded-xl shadow-md p-6">
-        <h2 class="text-xl font-semibold mb-2">Premium Almonds (Badam)</h2>
-        <img src="images/almonds.webp" alt="Premium Almonds" class="h-48 w-full object-cover rounded mb-4" />
-        <p class="text-green-700 font-bold mb-2">₹1000/kg</p>
-        <p class="text-sm text-gray-700 mb-4">High-quality California almonds, rich in antioxidants and healthy fats.</p>
-        <select class="p-2 border rounded mb-4 quantity-select">
-          <option value="250">250g</option>
-          <option value="500">500g</option>
-          <option value="1000" selected>1kg</option>
-        </select>
-        <button class="add-to-cart w-full bg-green-600 text-white py-2 rounded" data-name="Almonds" data-price-per-kg="1000">Add to Cart</button>
-      </article>
-
-      <!-- Cashews -->
-      <article class="bg-white rounded-xl shadow-md p-6">
-        <h2 class="text-xl font-semibold mb-2">Premium Cashews (Kaju)</h2>
-        <img src="images/cashews.avif" alt="Premium Cashews" class="h-48 w-full object-cover rounded mb-4" />
-        <p class="text-green-700 font-bold mb-2">₹1200/kg</p>
-        <p class="text-sm text-gray-700 mb-4">Fresh, creamy cashews packed with protein and essential minerals.</p>
-        <select class="p-2 border rounded mb-4 quantity-select">
-          <option value="250">250g</option>
-          <option value="500">500g</option>
-          <option value="1000" selected>1kg</option>
-        </select>
-        <button class="add-to-cart w-full bg-green-600 text-white py-2 rounded" data-name="Cashews" data-price-per-kg="1200">Add to Cart</button>
-      </article>
-    </main>
-
-    <!-- Cart -->
-    <aside class="bg-white rounded-xl shadow-md p-6 h-max sticky top-4">
-      <h2 class="text-2xl font-bold mb-4">Your Cart</h2>
-      <div id="cart-items" class="space-y-4 text-sm">
-        <p class="text-gray-500">Your cart is empty.</p>
-      </div>
-      <button id="checkout-btn" class="mt-4 w-full bg-green-700 text-white py-2 rounded" disabled>Checkout</button>
-    </aside>
   </div>
+  <!-- Cart Right -->
+  <aside class="bg-white rounded-xl shadow-md p-6 h-max md:w-1/4">
+    <h2 class="text-2xl font-bold mb-4">Your Cart</h2>
+    <div id="cart-items" class="space-y-4 text-sm">
+      <p class="text-gray-500">Your cart is empty.</p>
+    </div>
+    <button id="checkout-btn" class="mt-4 w-full bg-green-700 text-white py-2 rounded" disabled>Checkout</button>
+  </aside>
+</section>
 
-  <!-- Footer Section for Majeeo Nuts -->
-  <footer class="bg-white border-t mt-16">
-    <div class="bg-gray-100 py-8 px-4 sm:px-6 lg:px-16">
-      <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-8">
-        <div>
-          <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-24 mb-2">
-          <p class="text-gray-600">Majeeo Nuts brings you a collection of carefully selected dry fruits from India and across the world.</p>
-        </div>
-        <div>
-          <h4 class="font-semibold text-gray-800 mb-2">Quick Links</h4>
-          <ul class="text-gray-600 space-y-1">
-            <li><a href="about.html" class="hover:text-blue-600">About Us</a></li>
-            <li><a href="contact.html" class="hover:text-blue-600">Contact Us</a></li>
-            <li><a href="bulk-order.html" class="hover:text-blue-600">Bulk Ordering</a></li>
-            <li><a href="shop.html" class="hover:text-blue-600">Shopping</a></li>
-          </ul>
-        </div>
-        <div>
-          <h4 class="font-semibold text-gray-800 mb-2">Account Info</h4>
-          <ul class="text-gray-600 space-y-1">
-            <li><a href="account.html" class="hover:text-blue-600">My Account</a></li>
-            <li><a href="privacy.html" class="hover:text-blue-600">Privacy Policy</a></li>
-            <li><a href="return.html" class="hover:text-blue-600">Return Policy</a></li>
-            <li><a href="terms.html" class="hover:text-blue-600">Terms & Conditions</a></li>
-          </ul>
-        </div>
-        <div>
-          <h4 class="font-semibold text-gray-800 mb-2">Contact Details</h4>
-          <ul class="text-gray-600 space-y-2">
-            <li>📍 Mumbai, India</li>
-            <li>✉️ maheshgawade7799@gmail.com</li>
-            <li>📞 +91-7483600212</li>
-          </ul>
-          <div class="mt-4 flex space-x-4">
-            <a href="#" class="text-gray-500 hover:text-blue-600"><i class="fab fa-facebook"></i></a>
-            <a href="#" class="text-gray-500 hover:text-pink-500"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="text-gray-500 hover:text-blue-400"><i class="fab fa-twitter"></i></a>
-          </div>
-        </div>
+<!-- Product Section -->
+<div class="max-w-7xl mx-auto p-6 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+  <!-- Product 1 -->
+  <article class="bg-white rounded-xl shadow-md p-4">
+    <h2 class="text-md font-semibold mb-2">Premium Almonds (Badam)</h2>
+    <img src="images/almonds.webp" alt="Premium Almonds" class="h-32 w-full object-cover rounded mb-2" />
+    <p class="text-green-700 font-bold mb-2">₹1000/kg</p>
+    <p class="text-sm text-gray-700 mb-2">High-quality California almonds, rich in antioxidants and healthy fats.</p>
+    <select class="p-2 border rounded mb-2 quantity-select">
+      <option value="250">250g</option>
+      <option value="500">500g</option>
+      <option value="1000" selected>1kg</option>
+    </select>
+    <button class="add-to-cart w-full bg-green-600 text-white py-2 rounded" data-name="Almonds" data-price-per-kg="1000">Add to Cart</button>
+  </article>
+  <!-- Product 2 -->
+  <article class="bg-white rounded-xl shadow-md p-4">
+    <h2 class="text-md font-semibold mb-2">Premium Cashews (Kaju)</h2>
+    <img src="images/cashews.avif" alt="Premium Cashews" class="h-32 w-full object-cover rounded mb-2" />
+    <p class="text-green-700 font-bold mb-2">₹1200/kg</p>
+    <p class="text-sm text-gray-700 mb-2">Fresh, creamy cashews packed with protein and essential minerals.</p>
+    <select class="p-2 border rounded mb-2 quantity-select">
+      <option value="250">250g</option>
+      <option value="500">500g</option>
+      <option value="1000" selected>1kg</option>
+    </select>
+    <button class="add-to-cart w-full bg-green-600 text-white py-2 rounded" data-name="Cashews" data-price-per-kg="1200">Add to Cart</button>
+  </article>
+</div>
+
+<!-- Footer (same as before) -->
+<footer class="bg-white border-t mt-16">
+  <div class="bg-gray-100 py-8 px-4 sm:px-6 lg:px-16">
+    <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-8">
+      <div>
+        <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-24 mb-2">
+        <p class="text-gray-600">Majeeo Nuts brings you a collection of carefully selected dry fruits from India and across the world.</p>
       </div>
-      <div class="mt-8 border-t pt-4 text-center text-gray-500 text-sm">
-        © 2025 <strong>Majeeo Nuts</strong>. All Rights Reserved.
+      <div>
+        <h4 class="font-semibold text-gray-800 mb-2">Quick Links</h4>
+        <ul class="text-gray-600 space-y-1">
+          <li><a href="about.html" class="hover:text-blue-600">About Us</a></li>
+          <li><a href="contact.html" class="hover:text-blue-600">Contact Us</a></li>
+          <li><a href="bulk-order.html" class="hover:text-blue-600">Bulk Ordering</a></li>
+          <li><a href="shop.html" class="hover:text-blue-600">Shopping</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4 class="font-semibold text-gray-800 mb-2">Account Info</h4>
+        <ul class="text-gray-600 space-y-1">
+          <li><a href="account.html" class="hover:text-blue-600">My Account</a></li>
+          <li><a href="privacy.html" class="hover:text-blue-600">Privacy Policy</a></li>
+          <li><a href="return.html" class="hover:text-blue-600">Return Policy</a></li>
+          <li><a href="terms.html" class="hover:text-blue-600">Terms & Conditions</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4 class="font-semibold text-gray-800 mb-2">Contact Details</h4>
+        <ul class="text-gray-600 space-y-2">
+          <li>📍 Mumbai, India</li>
+          <li>✉️ maheshgawade7799@gmail.com</li>
+          <li>📞 +91-7483600212</li>
+        </ul>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
 
-  <!-- Scripts -->
-  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-  <script>
-    const cart = [];
-    const cartItemsDiv = document.getElementById("cart-items");
-    const checkoutBtn = document.getElementById("checkout-btn");
+<!-- Razorpay Checkout -->
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+<script>
+  const cart = [];
+  const cartItemsDiv = document.getElementById("cart-items");
+  const checkoutBtn = document.getElementById("checkout-btn");
 
-    function renderCart() {
-      cartItemsDiv.innerHTML = "";
-      if (cart.length === 0) {
-        cartItemsDiv.innerHTML = '<p class="text-gray-500">Your cart is empty.</p>';
-        checkoutBtn.disabled = true;
-        return;
-      }
-
-      checkoutBtn.disabled = false;
-      cart.forEach((item, index) => {
-        const itemDiv = document.createElement("div");
-        itemDiv.className = "border p-3 rounded flex justify-between items-start";
-        itemDiv.innerHTML = `
-          <div>
-            <p class="font-semibold">${item.name}</p>
-            <p>${item.grams}g for ₹${item.price.toFixed(2)}</p>
-          </div>
-          <button class="text-red-600" onclick="removeItem(${index})">Remove</button>
-        `;
-        cartItemsDiv.appendChild(itemDiv);
-      });
+  function renderCart() {
+    cartItemsDiv.innerHTML = "";
+    if (cart.length === 0) {
+      cartItemsDiv.innerHTML = '<p class="text-gray-500">Your cart is empty.</p>';
+      checkoutBtn.disabled = true;
+      return;
     }
-
-    function removeItem(index) {
-      cart.splice(index, 1);
-      renderCart();
-    }
-
-    document.querySelectorAll(".add-to-cart").forEach(button => {
-      button.addEventListener("click", () => {
-        const name = button.dataset.name;
-        const pricePerKg = parseInt(button.dataset.pricePerKg);
-        const grams = parseInt(button.parentElement.querySelector(".quantity-select").value);
-        const price = (pricePerKg / 1000) * grams;
-
-        cart.push({ name, grams, price });
-        renderCart();
-      });
+    checkoutBtn.disabled = false;
+    cart.forEach((item, index) => {
+      const itemDiv = document.createElement("div");
+      itemDiv.className = "border p-3 rounded flex justify-between items-start";
+      itemDiv.innerHTML = `
+        <div>
+          <p class="font-semibold">${item.name}</p>
+          <p>${item.grams}g for ₹${item.price.toFixed(2)}</p>
+        </div>
+        <button class="text-red-600" onclick="removeItem(${index})">Remove</button>
+      `;
+      cartItemsDiv.appendChild(itemDiv);
     });
+  }
 
-    checkoutBtn.addEventListener("click", () => {
-      const total = cart.reduce((sum, item) => sum + item.price, 0);
-      const options = {
-        key: "rzp_live_LIqOpioBHDIhG4",
-        amount: Math.round(total * 100),
-        currency: "INR",
-        name: "MajeeoNuts",
-        description: "Premium Dry Fruits Purchase",
-        handler: function (response) {
-          alert("Payment successful! Payment ID: " + response.razorpay_payment_id);
-          cart.length = 0;
-          renderCart();
-        },
-        prefill: {
-          email: "maheshgawade7799@gmail.com"
-        },
-        theme: {
-          color: "#047857"
-        }
-      };
-      const rzp = new Razorpay(options);
-      rzp.open();
-    });
-
+  function removeItem(index) {
+    cart.splice(index, 1);
     renderCart();
-  </script>
+  }
 
-  <script>
-    const searchInput = document.getElementById("searchInput");
-    const products = document.querySelectorAll("main article");
-
-    searchInput.addEventListener("input", () => {
-      const query = searchInput.value.toLowerCase();
-      products.forEach(product => {
-        const productName = product.querySelector("h2").innerText.toLowerCase();
-        product.style.display = productName.includes(query) ? "block" : "none";
-      });
+  document.querySelectorAll(".add-to-cart").forEach(button => {
+    button.addEventListener("click", () => {
+      const name = button.dataset.name;
+      const pricePerKg = parseInt(button.dataset.pricePerKg);
+      const grams = parseInt(button.parentElement.querySelector(".quantity-select").value);
+      const price = (pricePerKg / 1000) * grams;
+      cart.push({ name, grams, price });
+      renderCart();
     });
-  </script>
+  });
+
+  checkoutBtn.addEventListener("click", () => {
+    const total = cart.reduce((sum, item) => sum + item.price, 0);
+    const options = {
+      key: "rzp_live_LIqOpioBHDIhG4",
+      amount: Math.round(total * 100),
+      currency: "INR",
+      name: "MajeeoNuts",
+      description: "Premium Dry Fruits Purchase",
+      handler: function (response) {
+        alert("Payment successful! Payment ID: " + response.razorpay_payment_id);
+        cart.length = 0;
+        renderCart();
+      },
+      prefill: {
+        email: "maheshgawade7799@gmail.com"
+      },
+      theme: {
+        color: "#047857"
+      }
+    };
+    const rzp = new Razorpay(options);
+    rzp.open();
+  });
+
+  renderCart();
+</script>
+
+<script>
+  const searchInput = document.getElementById("searchInput");
+  const products = document.querySelectorAll("main article, div article");
+
+  searchInput.addEventListener("input", () => {
+    const query = searchInput.value.toLowerCase();
+    products.forEach(product => {
+      const productName = product.querySelector("h2").innerText.toLowerCase();
+      product.style.display = productName.includes(query) ? "block" : "none";
+    });
+  });
+</script>
+
 </body>
 </html>
